# linkedin-mcp-server

./: .coveragerc  .dockerignore  .dxtignore  .env.example  .gitignore  .gitmodules  .mcp.json  .mcpbignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.smithery  LICENSE  PR_DESCRIPTION.md  README.md  RELEASE_NOTES_TEMPLATE.md  SMITHERY_FIX_SUMMARY.md  TODO.md  btca.config.jsonc  debug_contact_extraction.py  debug_fast_scraper.py  docker-compose.local.yml  docker-compose.yml  example_contact_extraction_output.json  main.py  manifest.json  mypy.ini  pyproject.toml  pytest.ini  render.yaml  renovate.json  smithery.yaml  smithery_main.py  test_imports.py  test_local_smithery.sh  test_render.py  test_simple.sh  (+1 more)
.claude/: settings.local.json
.gemini/: settings.json
.github/: release.yml
.sentrux/: baseline.json
docs/: docker-hub.md  flows.md
examples/: debug_contact_extraction.py  example_contact_extraction_output.json  test_contact_extraction.py
linkedin_mcp_server/: __init__.py  __main__.py  antidetect.py  auth.py  authentication.py  bootstrap.py  callbacks.py  cli.py  cli_main.py  common_utils.py  constants.py  debug_trace.py  debug_utils.py  dependencies.py  error_diagnostics.py  error_handler.py  exceptions.py  logging_config.py  playwright_wrapper.py  rate_limiter.py  scraper_adapter.py  scraper_factory.py  scraper_lock.py  sequential_tool_middleware.py  serialization.py  server.py  session_state.py  setup.py
scripts/: debug_cookie_bridge.py  dump_snapshots.py  linkedin-mcp.sh  test_my_recent_posts.py  test_path_expansion.py
src/: main.py
tests/: conftest.py  test_api_client.py  test_api_tokens.py  test_application_extractor.py  test_auth.py  test_authentication.py  test_background_nav.py  test_bootstrap.py  test_browser_driver.py  test_browser_security.py  test_cache.py  test_cli_main.py  test_config.py  test_contact_extraction.py  test_core_auth.py  test_core_browser.py  test_core_utils.py  test_debug_trace.py  test_dependencies.py  test_error_diagnostics.py  test_error_handler.py  test_exceptions.py  test_fields.py  test_js_evaluate.py  test_link_metadata.py  test_logging_config.py  test_mcp_http.py  test_posts_scraping.py  test_posts_tools.py  test_scraping.py  test_serialization.py  test_server.py  test_session_state.py  test_setup.py  test_smithery_config.py  test_sqlite_cache.py  test_stealth.py  test_tools.py  test_tools_posts.py  (+2 more)
(+120 files in other folders)
