[project]
name = "linkedin-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "inquirer>=3.4.0",
    "keyring>=25.6.0",
    "linkedin-scraper",
    "mcp[cli]>=1.6.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pyperclip>=1.9.0",
]

[tool.uv.sources]
linkedin-scraper = { git = "https://github.com/stickerdaniel/linkedin_scraper.git" }

[tool.setuptools.package-data]
linkedin_mcp_server = ["py.typed"]
