[project]
name = "linkedin-mcp-server"
version = "0.1.0"
description = "MCP server for LinkedIn profile, company, and job scraping with Claude AI integration. Supports direct profile/company/job URL scraping with secure credential storage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "inquirer>=3.4.0",
    "keyring>=25.6.0",
    "linkedin-scraper",
    "mcp[cli]>=1.6.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pyperclip>=1.9.0",
]

[tool.setuptools.package-data]
linkedin_mcp_server = ["py.typed"]

[tool.uv.sources]
linkedin-scraper = { git = "https://github.com/joeyism/linkedin_scraper.git" }
